--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div>
           <button type="button" class="menu-close-btn">
             <svg class="mob-icon-close" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-black"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <nav>
@@ -569,7 +569,7 @@
             </label>
             <button class="footer-button" type="submit">Subscribe
               <svg class="button-svg"  width="24" height="24" >
-                <use href="./images/icons.svg#icon-Frame"></use>
+                <use href="./images/icons.svg#icon-Frame-3"></use>
               </svg>
             </button>
           </form>
@@ -582,7 +582,7 @@
     <div class="modal">
       <button type="button" class="modal-close">
         <svg class="icon-close" width="8" height="8" >
-          <use href="./images/icons.svg#icon-close-black"></use>
+          <use href="./images/icons.svg#icon-close"></use>
         </svg>
       </button>
       <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -596,7 +596,7 @@
               class="modal-input"
               id="user-name">
               <svg class="modal-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-person-black-18dp-1-1"></use>
+              <use href="./images/icons.svg#icon-person"></use>
               </svg>
             
           </div>
@@ -610,7 +610,7 @@
               class="modal-input"
               id="user-phone">
             <svg class="modal-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone-black-18dp-1-1"></use>
+              <use href="./images/icons.svg#icon-phone"></use>
             </svg>
           </div>
         </div>
@@ -623,7 +623,7 @@
               class="modal-input"
               id="user-email">
             <svg class="modal-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-email-black-18dp-1-1"></use>
+              <use href="./images/icons.svg#icon-email"></use>
             </svg>
           </div>
         </div>
@@ -650,7 +650,7 @@
             <label class="form-label" for="user-privacy"> 
               <span class="fake-check">
                 <svg class="icon-checkbox" width="10" height="8" >
-                  <use href="./images/icons.svg#icon-Vector"></use>
+                  <use href="./images/icon.svg#icon-checkmark"></use>
                 </svg>
               </span>I accept the terms and conditions of the <a class="link-policy">Privacy Policy</a></label>
             
