--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
             </label>
             <button class="footer-button" type="submit">Subscribe
               <svg class="button-svg"  width="24" height="24" >
-                <use href="./images/icons.svg#icon-Frame-3"></use>
+                <use href="./images/icons1.svg#icon-Frame-3"></use>
               </svg>
             </button>
           </form>
